tests/errors/sem.no-match.sig-arg.or
main :: () -> void {
    T :: (a: (!u) -> void) {
        return;
    };

    T(10);
};
